# jupyter-datafusion-iceberg

./: CLAUDE.md  README.md  docker-compose.yaml  pyproject.toml
jupyter/: Dockerfile
notebooks/: sample_datafusion_iceberg.ipynb
spark/apps/: generate_sample_data.py  verify_data.py
src/: Insert_Customer_Order_Data_To_Iceberg.py
